[package]
name = "cached_fn"
version = "0.1.1"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/cached_fn"
description = """
Cache a function's result in a map.
"""
keywords = ["fn", "cache"]

[dependencies]
rustc-hash = "2.0.0"
